<resources>

    <!-- Generic -->
    <string name="app_name">My Receipt</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="cant_launch_intent">Your device in unable to handle this link</string>
    <string name="loading_image_error">Unable to load image.</string>
    <string name="profile">Profile</string>
    <string name="dont_ask_again">Don\'t ask me again.</string>
    <string name="exit">Exit</string>
    <string name="exit_confirm">Are you sure you want to exit?</string>

    <!-- Errors -->
    <string name="error_generic">An unexpected error has occurred. Please try again.</string>
    <string name="error_401">This requires you to be logged in. Please login and try again.</string>
    <string name="error_403">You do not have permission to complete this action. You might need to login again.</string>
    <string name="error_network">Unable to connect to Saving Plate. Check your connection and try again.</string>

    <string name="nav_new">New</string>
    <string name="nav_help">Help</string>
    <string name="nav_find_us_facebook">Find us on Facebook</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_join_as_a_vendor">Join as a Vendor</string>
    <string name="nav_payment_information">Payment Information</string>
    <string name="nav_logout">Log out</string>
    <string name="developer">Developer</string>
    <string name="version">Version</string>
    <string name="system">System</string>

    <!-- Preferences -->
    <string name="pref_category_title">Theme</string>
    <string name="pref_theme_title">App Color Theme</string>
    <string name="pref_dark_theme_title">Dark Theme</string>
    <string name="pref_dark_theme_on">Use dark theme</string>
    <string name="pref_dark_theme_off">Do not use dark theme</string>
    <string name="pref_exit_title">Confirm App Exit</string>
    <string name="pref_exit_on">Prompt me before exiting RedBee</string>
    <string name="pref_exit_off">Do not prompt me when exiting RedBee</string>
    <string name="btn_label_ok">OK</string>
    <string name="loading">Loading...</string>
    <string name="okay">Okay</string>

</resources>
