<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_category_title">

        <com.kennyc.colorchooser.ColorChooserPreference
            android:key="color"
            android:title="@string/pref_theme_title"
            android:positiveButtonText="@string/okay"
            android:negativeButtonText="@string/cancel"
            app:cc_colors="@array/pref_colors"
            app:cc_colorNames="@array/pref_themes_items" />

        <CheckBoxPreference
            android:key="darkTheme"
            android:defaultValue="true"
            android:summaryOn="@string/pref_dark_theme_on"
            android:summaryOff="@string/pref_dark_theme_off"
            android:title="@string/pref_dark_theme_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/system">

        <CheckBoxPreference
            android:key="confirmExit"
            android:title="@string/pref_exit_title"
            android:summaryOn="@string/pref_exit_on"
            android:summaryOff="@string/pref_exit_off"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/developer"
        android:key="developerSettings">

        <Preference
            android:key="version"
            android:title="@string/version"
            android:enabled="false" />

    </PreferenceCategory>

</PreferenceScreen>